docs: add javadoc